--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["chapter-1", "chapter-2"]
+members = ["chapter-1", "chapter-2", "chapter-3"]
 
 [workspace.package]
 version = "0.1.0"
